// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`StatusMessage\` is rendered correctly with the status being \`PENDING\` 1`] = `
<Translated
  status="pending"
>
  <StatusMessage
    status="pending"
    t={[Function]}
  />
</Translated>
`;

exports[`\`StatusMessage\` is rendered correctly with the status being \`PENDING\` 2`] = `
<Translated
  status="fail"
>
  <StatusMessage
    status="fail"
    t={[Function]}
  >
    <Message
      content="loginFailed.content"
      header="loginFailed.headline"
      icon="warning sign"
      warning={true}
    >
      <div
        className="ui icon warning message"
      >
        <Icon
          as="i"
          name="warning sign"
        >
          <i
            aria-hidden="true"
            className="warning sign icon"
          />
        </Icon>
        <MessageContent>
          <div
            className="content"
          >
            <MessageHeader
              content="loginFailed.headline"
            >
              <div
                className="header"
              >
                loginFailed.headline
              </div>
            </MessageHeader>
            <p>
              loginFailed.content
            </p>
          </div>
        </MessageContent>
      </div>
    </Message>
  </StatusMessage>
</Translated>
`;

exports[`\`StatusMessage\` is rendered correctly with the status being \`PENDING\` 3`] = `
<Translated
  status="success"
>
  <StatusMessage
    status="success"
    t={[Function]}
  />
</Translated>
`;

exports[`\`StatusMessage\` is rendered correctly with the status being \`PENDING\` 4`] = `
<Translated
  status="in_progress"
>
  <StatusMessage
    status="in_progress"
    t={[Function]}
  />
</Translated>
`;
